--- a/client/site_users.jade
+++ b/client/site_users.jade
@@ -84,7 +84,7 @@ template(name='site_users')
                     // else
                     //     .ui.icon.compact.circular.button.sort_up
                     //         i.caret.up.icon
-                    .ui.inline.header 
+                    .ui.inline.small.header 
                         |#{stackusers.count} / #{user_count}
                     .scrolling.ui.items
                         each stackusers
