round of pruning, removed tag counts, streamline effort

--- a/client/question.jade
+++ b/client/question.jade
@@ -33,23 +33,24 @@ template(name='stack_page')
                     a.ui.circular.icon.button(href=link target='_window' title=link)
                         // |#{link}
                         i.external.large.icon
-                    .ui.list
-                        .item.zoomer 
-                            i.eye.icon
-                            |#{view_count} views
-                        if in_dev
-                            .item.zoomer id #{_id}
-                        if protected_date
-                            .item.zoomer date protected {{ufrom protected_date}}
-                        if accepted_answer_id
-                            .item.zoomer accepted answer id #{accepted_answer_id}
-                        .item.zoomer #{answer_count} answers
-                        // .item.zoomer 
-                        //     i.hashtag.icon
-                        //     |score #{score}
-                        .item.zoomer qid #{question_id}
-                        .item.zoomer imported #{_when}
-                        .item.zoomer license #{content_license}
+                    // .ui.list
+                    //     .item
+                    //         // i.eye.icon
+                    //         |#{view_count} views
+                    //     if in_dev
+                    //         .item.zoomer id #{_id}
+                    //     if protected_date
+                    //         .item.zoomer date protected {{ufrom protected_date}}
+                    //     if accepted_answer_id
+                    //         .item.zoomer accepted answer id #{accepted_answer_id}
+                    //     .item.zoomer #{answer_count} answers
+                    //     // .item.zoomer 
+                    //     //     i.hashtag.icon
+                    //     //     |score #{score}
+                    //     if in_dev
+                    //         .item.zoomer qid #{question_id}
+                    //         .item.zoomer imported #{_when}
+                    //     // .item.zoomer license #{content_license}
                         
                     // +bookmark_button
                     // +voting
