--- a/client/site_questions.jade
+++ b/client/site_questions.jade
@@ -4,6 +4,7 @@ template(name='site_page')
             .row
                 .ui.twelve.wide.column
                     img.get_info.shadowed.ui.inline.image(src=logo_url )
+                    |#{audience}
                     a.ui.circular.basic.large.button(href="/site/#{api_site_parameter}/users")
                         i.large.user.outline.icon
                         |users
@@ -183,6 +184,7 @@ template(name='stack_tag_selector')
             if term.watson.metadata.image
                 img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
         strong #{name}
-        small #{count}
+        // if in_dev
+        //     small #{count}
 
 
