--- a/client/stack_sites.jade
+++ b/client/stack_sites.jade
@@ -14,12 +14,12 @@ template(name='stack')
                 .ui.five.column.stackable.grid
                     each site_docs
                         a.center.aligned.column.goto_site(href="/site/#{api_site_parameter}")
-                            img.ui.inline.image.mobile.hiden.site.shadowed.zoomer(src=high_resolution_icon_url)
-                            img.ui.image.site.shadowed.zoomer(src=logo_url)
+                            // img.ui.inline.tiny.image.mobile.hiden.site.shadowed.zoomer(src=high_resolution_icon_url)
+                            img.ui.inline.image.site.shadowed.zoomer(src=logo_url)
                             // .header
                             //     |!{name}
-                            // .description 
-                            //     |#{audience}
+                            .description 
+                                |#{audience}
                 // .ui.inline.header 
                 //     i.question.icon
                 //     |questions
