--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,13 +1,13 @@
 template(name='nav')
     // a.icon.ui.big.circular.icon.button(href='/')
-    .ui.fluid.attached.two.item.large.menu.topnav(style="background-color:#{current_user.theme_color};")
+    .ui.fluid.attached.three.item.large.menu.topnav(style="background-color:#{current_user.theme_color};")
         // a.icon.header.item.pointer.toggle_leftbar
         //     i.bars.large.grey.icon
         if connected
             // a.icon.item.home2(href='/')
             //     i.big.yin.yang.icon
-            // a.icon.item.home2(href='/reddit')
-            //     i.big.reddit.icon
+            a.icon.item.home2(href='/reddit')
+                i.big.reddit.icon
             a.icon.item.home2(href='/stack' data-tab='groups')
                 i.large.stack.exchange.icon
             a.icon.item.users(href='/users')
