--- a/client/stack_sites.jade
+++ b/client/stack_sites.jade
@@ -13,9 +13,9 @@ template(name='stack')
             .sixteen.wide.center.aligned.column.scrolling
                 .ui.five.column.stackable.grid
                     each site_docs
-                        a.center.aligned.column.goto_site(href="/site/#{api_site_parameter}")
+                        a.center.aligned.column.goto_site.zoomer(href="/site/#{api_site_parameter}")
                             // img.ui.inline.tiny.image.mobile.hiden.site.shadowed.zoomer(src=high_resolution_icon_url)
-                            img.ui.inline.image.site.shadowed.zoomer(src=logo_url)
+                            img.ui.inline.image.site.shadowed(src=logo_url)
                             // .header
                             //     |!{name}
                             .description 
