add voting, comments back, item tags are tertiary buttons, https ganalytics attempts

--- a/client/client.jade
+++ b/client/client.jade
@@ -33,15 +33,14 @@ head
     link(rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.css")
     script(src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.js")
     // script(src="https://cdn.jsdelivr.net/npm/sweetalert2@9")
-
-    script(async src="https://www.googletagmanager.com/gtag/js?id=G-YP85EV6086")
-
+    script(async src="https://www.googletagmanager.com/gtag/js?id=G-GLYPPRGJFQ")
     script.
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
         
-        gtag('config', 'G-YP85EV6086');
+        gtag('config', 'G-GLYPPRGJFQ');
+
 
 template(name='layout')
     +nav
