--- a/client/site_users.jade
+++ b/client/site_users.jade
@@ -100,7 +100,7 @@ template(name='site_users')
                                         +term_image                                            
                                         |!{location}
                                     each tags
-                                        .ui.basic.small.circular.label #{this}
+                                        .ui.small.tertiary.button #{this}
                 // .four.wide.center.aligned.column
                 //     .ui.header filter
         
