--- a/client/nav.jade
+++ b/client/nav.jade
@@ -6,9 +6,9 @@ template(name='nav')
         if connected
             // a.icon.item.home2(href='/')
             //     i.big.yin.yang.icon
-            a.icon.item.home2(href='/reddit')
+            a.icon.item.reddit(href='/reddit')
                 i.large.reddit.grey.icon
-            a.icon.item.home2(href='/stack' data-tab='groups')
+            a.icon.item.stackexchange(href='/stack' data-tab='groups')
                 i.large.stack.exchange.grey.icon
             a.icon.item.users(href='/users')
                 i.large.users.grey.icon
