only pub needed stack sites fields in stack_sites, for grid

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -6,7 +6,7 @@ template(name='nav')
         if connected
             // a.icon.item.home2(href='/')
             //     i.big.yin.yang.icon
-            a.icon.item.reddit(href='/reddit')
+            a.icon.item.goto_reddit(href='/reddit')
                 i.large.reddit.grey.icon
             a.icon.item.stackexchange(href='/stack' data-tab='groups')
                 i.large.stack.exchange.grey.icon
