--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,11 +1,13 @@
 template(name='nav')
     // a.icon.ui.big.circular.icon.button(href='/')
-    .ui.fluid.attached.four.item.large.menu.topnav(style="background-color:#{current_user.theme_color};")
+    .ui.fluid.attached.five.item.menu.topnav(style="background-color:#{current_user.theme_color};")
         // a.icon.header.item.pointer.toggle_leftbar
         //     i.bars.large.grey.icon
         if connected
             // a.icon.item.home2(href='/')
             //     i.big.yin.yang.icon
+            a.icon.disabled.item.goto_wikipedia(href='/wikipedia')
+                i.large.wikipedia.icon
             a.icon.item.goto_reddit(href='/reddit')
                 i.large.reddit.grey.icon
             a.icon.item.stackexchange(href='/stack' data-tab='groups')
@@ -29,8 +31,6 @@ template(name='nav')
             //         input(type='text')
             // a.icon.disabled.item(href='/reddit')
             //     i.big.reddit.icon
-            // a.icon.disabled.item(href='/wikipedia')
-            //     i.big.wikipedia.icon
         unless connected
             .item
                 i.yin.yang.loading.big.icon
